# chat-app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  testagain.py
chatapp/: app.py  assets.py  chatbox.py  chatconn.py  client.py  cmds.py  constants.py  interfaces.py  socket.py  ui.py  util.py
chatapp/windowgui/: assets.py  constants.py  text.py  timers.py  ui.py  util.py  window.py
src/main/: app.py  assets.py  chatbox.py  chatconn.py  exceptions.py  main.py  ui.py
src/main/windowgui/: text.py
