[tool.poetry]
name = "chatapp"
version = "0.1.0"
description = ""
authors = ["Hunter Bowie <axolotl@students.cs.ubc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"
pyperclip = "^1.9.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
